<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="net.copaba.poloth85.desarrollandounaaplicacion.ConfirmarDatos">
    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm"
        android:textSize="@dimen/head"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/top"
         >
        <LinearLayout
            android:padding="@dimen/between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="@dimen/txtSize"
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"/>
            </LinearLayout>
        <LinearLayout
            android:padding="@dimen/between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="@dimen/txtSize"
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechad"
                />
            <TextView
                android:paddingLeft="@dimen/pad"
                android:textSize="@dimen/txtSize"
                android:id="@+id/txtFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFecha"
                />
        </LinearLayout>
        <LinearLayout
            android:padding="@dimen/between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="@dimen/txtSize"
                android:id="@+id/tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                />
            <TextView
                android:paddingLeft="@dimen/pad"
                android:textSize="@dimen/txtSize"
                android:id="@+id/txtTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTel"
                />
        </LinearLayout>
        <LinearLayout
            android:padding="@dimen/between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="@dimen/txtSize"
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                />
            <TextView
                android:paddingLeft="@dimen/pad"
                android:textSize="@dimen/txtSize"
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEmail"
                />
        </LinearLayout>
        <LinearLayout
            android:padding="@dimen/between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="@dimen/txtSize"
                android:id="@+id/Descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Descripcion"
                />
            <TextView
                android:paddingLeft="@dimen/pad"
                android:textSize="@dimen/txtSize"
                android:id="@+id/txtDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDescripcion"
                />
        </LinearLayout>
        <LinearLayout
            android:padding="@dimen/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/edBoton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEdBoton"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
