<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.copaba.poloth85.desarrollandounaaplicacion.MainActivity">

    <LinearLayout
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:layout_weight="100"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nombre"
                android:imeOptions="actionDone"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

           <TextView
               android:id="@+id/encabezadoFecha"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fecha"
               />
            <TextView
                android:id="@+id/bdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/action"
                />
            <DatePicker
                android:layout_gravity="center"
                android:id="@+id/picker"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spiner"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:clickable="true"
                android:startYear="1940"
                android:endYear="2006"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/telefono"
                android:imeOptions="actionNext"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/descripcion"
                android:imeOptions="actionDone"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="5">
        <Button
            android:id="@+id/boton"
            android:text="@string/boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
    </LinearLayout>
</LinearLayout>
